--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -32,7 +32,7 @@ RUN bundle install && \
 COPY . .
 
 # Precompile bootsnap code for faster boot times
-RUN bundle exec bootsnap precompile app/ lib/
+#RUN bundle exec bootsnap precompile app/ lib/
 
 # Precompiling assets for production without requiring secret RAILS_MASTER_KEY
 # RUN SECRET_KEY_BASE_DUMMY=1 ./bin/rails assets:precompile
@@ -51,9 +51,9 @@ COPY --from=build /usr/local/bundle /usr/local/bundle
 COPY --from=build /rails /rails
 
 # Run and own only the runtime files as a non-root user for security
-RUN useradd rails --create-home --shell /bin/bash && \
-    chown -R rails:rails db log storage tmp
-USER rails:rails
+#RUN useradd rails --create-home --shell /bin/bash && \
+#    chown -R rails:rails db log storage tmp
+#USER rails:rails
 
 # Entrypoint prepares the database.
 ENTRYPOINT ["/usr/local/bundle/ruby/2.7.0/gems/aws_lambda_ric-2.0.0/bin/aws_lambda_ric"]
